# huskarl-login

./: Cargo.toml  README.md  mise.toml
docs/explanation/: cookie_security.md  liveness.md  refresh.md  session_model.md
docs/guide/: adapter.md  caching.md  enrichment.md  external_store.md  rotation.md
src/: _docs.rs  completed_login.rs  config.rs  cookie.rs  cookie_session.rs  enrich.rs  error_page.rs  grant.rs  lib.rs  liveness.rs  metrics.rs  session.rs  session_state.rs  store_session.rs  test_support.rs  url.rs
src/engine/: callback.rs  logout.rs  mod.rs  redirect.rs  tests.rs
