[package]
name = "huskarl-login"
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
description = "OAuth2/OIDC login flow helpers for huskarl."
repository = "https://github.com/huskarl-rs/huskarl-login"
homepage = "https://github.com/huskarl-rs/huskarl-login"
documentation = "https://docs.rs/huskarl-login"
license = "MIT OR Apache-2.0"
keywords = ["oauth2", "oidc", "security", "authentication", "login"]
categories = ["authentication"]
readme = "README.md"

[package.metadata.docs.rs]
# Render the `_docs` module (gated on `cfg(docsrs)`) and enable `doc_cfg`.
# `cargo docs-rs` reads this block too.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22"
bon = { version = "3.9", features = ["experimental-generics-setters"] }
bytes = "1"
ciborium = "0.2"
http = { version = "1", default-features = false }
huskarl = { version = "0.9", default-features = false }
log = "0.4"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_html_form = "0.4"
serde_json = { version = "1", default-features = false }
snafu = { version = "0.9", default-features = false, features = ["rust_1_81", "std"] }
strum = { version = "0.27", default-features = false, features = ["derive"] }
uuid = { version = "1", features = ["v7", "serde"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
uuid = { version = "1", features = ["v7", "serde", "js"] }

[dev-dependencies]
hex = "0.4"
huskarl-crypto-native = { version = "0.9" }
rand = "0.10"
rstest = "0.26.1"
tokio = { version = "1", features = ["full"] }
url = "2"
